--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -9,13 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-native": "0.74.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://localhost:8080"
 }
