--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=H_Hospital_App
 
-#\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://localhost:3306/team_h
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mariadb://localhost:3306/team_happ
+# \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/team_happ
 spring.datasource.username=team_hApp_user
 spring.datasource.password=mariadb
 
-#\uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
+# JPA \uC124\uC815
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+
+# \uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
 mybatis.mapper-locations=classpath:mapper/*.xml
