--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=H_Hospital_App
 
+# Spring Boot \uC560\uD50C\uB9AC\uCF00\uC774\uC158\uC758 \uD3EC\uD2B8 \uC124\uC815
+server.port=8081
+
 # \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/team_happ
@@ -11,7 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 spring.jpa.properties.hibernate.format_sql=true
-
 
 # \uCFFC\uB9AC\uAC00 \uB4E4\uC5B4\uC788\uB294 mapper \uD30C\uC77C \uC704\uCE58 \uC9C0\uC815
 mybatis.mapper-locations=classpath:mapper/*.xml
