--- a/src/main/frontend/H_Hospital_App/app.json
+++ b/src/main/frontend/H_Hospital_App/app.json
@@ -18,7 +18,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.hcjin.H_Hospital_App"
     },
     "web": {
       "favicon": "./assets/favicon.png"
