--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -1,7 +1,6 @@
 {
   "name": "h_hospital_app",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,24 +8,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-device": "~6.0.2",
+    "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
+    "normalize-css-color": "^1.0.2",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
-    "react-native": "^0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-location": "~17.0.1",
-    "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
+    "react-icons": "^5.3.0",
+    "react-native": "0.73.2",
+    "react-native-crypto": "^2.2.0",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-uuid": "^2.0.2",
+    "react-native-web": "~0.19.10",
+    "uuid": "^10.0.0",
+    "expo-random": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
   "private": true,
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8081"
 }
