--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -14,34 +14,25 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
-<<<<<<< HEAD
     "expo-device": "~6.0.2",
-=======
->>>>>>> main
     "expo-location": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "normalize-css-color": "^1.0.2",
     "react": "18.2.0",
     "react-daum-postcode": "^3.1.3",
-<<<<<<< HEAD
-=======
-    "react-native": "^0.74.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
->>>>>>> main
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
     "react-native": "0.73.2",
     "react-native-crypto": "^2.2.0",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "^3.31.1",
     "react-native-uuid": "^2.0.2",
-    "react-native-web": "~0.19.10",
     "uuid": "^10.0.0",
-    "expo-random": "~14.0.1"
+    "expo-random": "~14.0.1",
+    "react-native-get-random-values": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
