--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring Boot \uC560\uD50C\uB9AC\uCF00\uC774\uC158\uC758 \uD3EC\uD2B8 \uC124\uC815
-server.port=https://4468-58-151-101-222.ngrok-free.app
+server.port=8080
 
 
 # \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC815\uBCF4
