--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -33,7 +33,8 @@
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
