--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -34,6 +34,7 @@
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.8.6",
+    "use-interval": "^1.4.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
