--- a/src/main/frontend/H_Hospital_App/android/build.gradle
+++ b/src/main/frontend/H_Hospital_App/android/build.gradle
@@ -9,6 +9,8 @@ buildscript {
         kotlinVersion = findProperty('android.kotlinVersion') ?: '1.9.23'
 
         ndkVersion = "26.1.10909125"
+        // 카카오 SDK 버전 설정
+        kakao_version = '2.5.0'
     }
     repositories {
         google()
@@ -18,6 +20,9 @@ buildscript {
         classpath('com.android.tools.build:gradle')
         classpath('com.facebook.react:react-native-gradle-plugin')
         classpath('org.jetbrains.kotlin:kotlin-gradle-plugin')
+        classpath "com.kakao.sdk:v2-analytics:${kakao_version}"
+        classpath "com.kakao.sdk:v2-user:${kakao_version}"
+        // 기타 의존성
     }
 }
 
