--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -23,22 +23,22 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.2.0",
     "react-icons": "^5.3.0",
-    "react-native": "0.73.2",
+    "react-native": "0.74.5",
     "react-native-crypto": "^2.2.0",
     "react-native-device-info": "^11.1.0",
-    "react-native-gesture-handler": "^2.19.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "^3.15.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-uuid": "^2.0.2",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.8.6",
+    "react-native-webview": "13.8.6",
     "use-interval": "^1.4.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
