--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -35,7 +35,8 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "use-interval": "^1.4.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-crypto": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
