--- a/src/main/frontend/H_Hospital_App/package.json
+++ b/src/main/frontend/H_Hospital_App/package.json
@@ -14,8 +14,12 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-asset": "~10.0.10",
+    "expo-crypto": "~13.0.2",
     "expo-device": "~6.0.2",
     "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.17",
+    "expo-permissions": "^14.4.0",
     "expo-random": "~14.0.1",
     "expo-status-bar": "~1.12.1",
     "normalize-css-color": "^1.0.2",
@@ -35,9 +39,7 @@
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "use-interval": "^1.4.0",
-    "uuid": "^10.0.0",
-    "expo-crypto": "~13.0.2",
-    "expo-asset": "~10.0.10"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
